orders.yml
# Deployment + Service for Orders microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: microservices
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: shridharballal30/orders:v1
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /api/orders
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/orders
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 8081
